third_party/move/move-compiler/tests/move_check/v2_tests/bytecode-generator/wildcard2.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/v2_tests/bytecode-generator/wildcard2.move:4:17
  │
3 │         let x: u64;
  │             - The variable 'x' does not have a value. The variable must be assigned a value before being used.
4 │         let _ = x;
  │                 ^ Invalid usage of unassigned variable 'x'

