third_party/move/move-compiler/tests/move_check/v2_tests/bytecode-generator/wildcard2.move
module 0xc0ffee::m {
    public fun baz() {
        let x: u64;
        let _ = x;
    }
}
